// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CompanySetting Default 1`] = `
<ul
  className="MuiList-root-fLynYd cQuONh MuiList-root MuiList-padding"
>
  <li
    className="MuiListItem-root-cdJXGE llUXNe MuiListItem-root MuiListItem-gutters MuiListItem-padding"
    disabled={false}
  >
    <div
      className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiChip-root-bqKNSR iZdwKO MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-deletable MuiChip-deletableColorDefault MuiChip-filledDefault"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="MuiChip-label-dLxtcZ bjGQdB MuiChip-label MuiChip-labelMedium"
      >
        Sample1
      </span>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root-ffGNMi ufROg MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-deleteIcon MuiChip-deleteIconMedium MuiChip-deleteIconColorDefault MuiChip-deleteIconOutlinedColorDefault"
        data-testid="VisibilityIcon"
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
        />
      </svg>
    </div>
  </li>
  <li
    className="MuiListItem-root-cdJXGE llUXNe MuiListItem-root MuiListItem-gutters MuiListItem-padding"
    disabled={false}
  >
    <div
      className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiChip-root-bqKNSR ihhhwq MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-deletable MuiChip-deletableColorDefault MuiChip-filledDefault"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="MuiChip-label-dLxtcZ bjGQdB MuiChip-label MuiChip-labelMedium"
      >
        Sample2
      </span>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root-ffGNMi ufROg MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-deleteIcon MuiChip-deleteIconMedium MuiChip-deleteIconColorDefault MuiChip-deleteIconOutlinedColorDefault"
        data-testid="VisibilityIcon"
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
        />
      </svg>
    </div>
  </li>
  <li
    className="MuiListItem-root-cdJXGE llUXNe MuiListItem-root MuiListItem-gutters MuiListItem-padding"
    disabled={false}
  >
    <div
      className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiChip-root-bqKNSR ecBHVW MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-clickable MuiChip-clickableColorDefault MuiChip-deletable MuiChip-deletableColorDefault MuiChip-filledDefault"
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="MuiChip-label-dLxtcZ bjGQdB MuiChip-label MuiChip-labelMedium"
      >
        Sample3
      </span>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root-ffGNMi ufROg MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-deleteIcon MuiChip-deleteIconMedium MuiChip-deleteIconColorDefault MuiChip-deleteIconOutlinedColorDefault"
        data-testid="VisibilityOffIcon"
        focusable="false"
        onClick={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78 3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
        />
      </svg>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Header Default 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        SampleTitle
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Tab1
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            Tab2
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Tab3
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Tab4
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Tab5
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots NewFilePage Default 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            表示設定
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-dQoVA ilZDOo"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-bqyKOL gfVckM"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-kstqJO jrfcDJ"
        >
          分析対象のファイルをドラッグアンドドロップするかクリックして選択してください
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root Mui-disabled MuiButton-root-gxQIQh jYZmrU"
      disabled={true}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      アップロードして分析を実施
    </button>
  </div>,
]
`;

exports[`Storyshots NewFilePage Error 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            表示設定
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-dQoVA ilZDOo"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-bqyKOL gfVckM"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-kstqJO jrfcDJ"
        >
          <ol>
            <li>
              Sample.xlsx
            </li>
          </ol>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh urAEl"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      処理に失敗しました。対象のファイルを確認し、解決しない場合は対象のファイルと以下のメッセージを添えて連絡をください
    </button>
  </div>,
]
`;

exports[`Storyshots NewFilePage File Selected 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            表示設定
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-dQoVA ilZDOo"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-bqyKOL gfVckM"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-kstqJO jrfcDJ"
        >
          <ol>
            <li>
              Sample.xlsx
            </li>
          </ol>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh jYZmrU"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      アップロードして分析を実施
    </button>
  </div>,
]
`;

exports[`Storyshots NewFilePage Loading 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            表示設定
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-dQoVA ilZDOo"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-bqyKOL gfVckM"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-kstqJO jrfcDJ"
        >
          <ol>
            <li>
              Sample.xlsx
            </li>
          </ol>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root Mui-disabled MuiButton-root-gxQIQh jYZmrU"
      disabled={true}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiCircularProgress-root-lieVZj dvIXuQ MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary"
        role="progressbar"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-kCBcaX dKLwFq MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-cFBlhL fuNjJu MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots NewFilePage Success 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            表示設定
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-dQoVA ilZDOo"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-bqyKOL gfVckM"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-kstqJO jrfcDJ"
        >
          <ol>
            <li>
              Sample.xlsx
            </li>
          </ol>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh bjzBGh"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      処理完了
    </button>
  </div>,
]
`;

exports[`Storyshots UploadButton Default 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh jYZmrU"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  SampleText
</button>
`;

exports[`Storyshots UploadButton Disabled 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root Mui-disabled MuiButton-root-gxQIQh jYZmrU"
  disabled={true}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  SampleText
</button>
`;

exports[`Storyshots UploadButton Error 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh urAEl"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  Error
</button>
`;

exports[`Storyshots UploadButton Loading 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root Mui-disabled MuiButton-root-gxQIQh jYZmrU"
  disabled={true}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiCircularProgress-root-lieVZj dvIXuQ MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary"
    role="progressbar"
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-kCBcaX dKLwFq MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle-cFBlhL fuNjJu MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </span>
</button>
`;

exports[`Storyshots UploadButton Success 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh bjzBGh"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  Success
</button>
`;
